chaning app.yaml

--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,9 @@ runtime: python27
 api_version: 1
 threadsafe: true
 
+- name: ssl
+  version: latest
+
 # [START handlers]
 handlers:
 - url: /static
